--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </section>
 
             <section id="skills">
-                <h2>My Web Developer Skills</h2>
+                <h2>My Web Developer Skills/and Tools Used</h2>
                 <div id="skills2">
                     
                     <ul>
@@ -60,6 +60,8 @@
                         <li>Relational Databases</li>
                         <li>Relational Databases </li> 
                         <li>Source Control / GitHub</li>
+                        <li>Intellij</li>
+                        <li>Visual Studio Code</li>
                     </ul>
                 </div>
 
