--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
             <a href="#aboutMe">About Me</a>
             <a href="#projects">Current Projects</a>
             <a href="#skills">My Web Developer Skills</a>
-            <a href="#socialMedia">Social Media</a>
-            <a href="#contactInfo">Contact</a>
+            <a href="#socialMedia">Social Media & Contact Info</a>
+        
         
         </nav>
 
         <div class="profile_bottom">
             <section id="socialMedia">
-                <h3>Social Media/Email</h3>
+                <h3>Social Media & Contact Info</h3>
                     <ul>
                         <li><a href="https://github.com/DiaS793"> GitHub</a></li>
                         <li> <a href="https://www.linkedin.com/in/dia-scruggs/"> LinkedIn</a></li>
