--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <button id="mybtn" class="videoBtn">Mystery Educator</button>
               <div id="myModal" class="modal">
                 <div class="modal-content">
-                  <span class="close">&times;</span>
+                  <span class="close">X</span>
                   <p>Description coming soon</p>
                 </div>
               </div>
