--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <p>Description coming soon.</p>
                   </div>
                 </div>
-                  <a href="http://" target="_blank">
+                  <a href="https://github.com/DiaS793/reviews-site-mvc-DiaS793" target="_blank">
                     <img src="images\reviewHome.png" alt="" />
                   </a>
               </div>
@@ -190,7 +190,7 @@
                     </div>
                   </div>
                   
-                  <a href="http://" target="_blank">
+                  <a href="https://github.com/DiaS793/team-3-project" target="_blank">
                     <img src="images\JAC-Enterprises-home1.png" alt="" />
                    </a>
                   
