--- a/index.html
+++ b/index.html
@@ -257,76 +257,15 @@
                     </div>
                     <div style="height: 350px; overflow-y: scroll">
                       <br>
-                      <p>Lorem ipsum dolor sit, amet consectetur adipisicing 
-                        elit. Laborum quos maxime perferendis placeat totam 
-                        repellat similique corporis voluptatibus possimus minus 
-                        dolorum, nemo magnam facere, voluptates atque quidem saepe 
-                        doloribus perspiciatis suscipit impedit est ea officia hic 
-                        reiciendis? Iure cum ipsa, accusantium sint facilis impedit
-                        neque nisi repellat? Assumenda inventore expedita animi 
-                        molestiae, aspernatur iure quas enim, voluptatibus maiores
-                        quia voluptatem error explicabo nihil! Eos illo cupiditate 
-                        suscipit quaerat. Ipsa aperiam iure illum, dolorum quis 
-                        quae reprehenderit officiis maiores consequatur, eos 
-                        nesciunt ipsam iste adipisci. Laborum voluptate ex, ab 
-                        expedita maiores iure, rerum, sit quod aut vel quis. Maxime
-                        aliquid quia ipsa esse voluptates sit laborum, dolorem 
-                        voluptas iste sapiente tempore, vitae in cumque quasi 
-                        ipsam, ullam architecto nemo quos! Necessitatibus 
-                        exercitationem rem doloribus neque id dolorem perferendis
-                        molestiae. Quod earum architecto eaque laudantium ipsum 
-                        nesciunt necessitatibus cum quia nobis! Sint inventore 
-                        debitis ipsa voluptate cum, quam magnam rem dolore cumque
-                        neque corporis, quas quo perferendis eveniet, aliquam 
-                        eligendi consequatur at. Fuga nesciunt accusantium 
-                        dignissimos explicabo eligendi quisquam commodi 
-                        voluptatibus dicta recusandae corrupti eum provident 
-                        repellendus, tempora, pariatur dolores nobis, neque 
-                        voluptates animi libero quae. Accusantium, sed qui
-                        natus neque explicabo veniam itaque numquam ea 
-                        porro quasi voluptas autem reprehenderit, delectus 
-                        sunt laudantium enim blanditiis nam eveniet vitae 
-                        aliquam quo saepe repellendus aperiam! Quibusdam 
-                        corrupti dignissimos eligendi aliquam, molestias 
-                        mollitia itaque neque doloremque voluptatum 
-                        necessitatibus molestiae tempora labore deleniti 
-                        eveniet quam dicta magni quae ut soluta omnis 
-                        repudiandae consequuntur reiciendis ipsum? Tempora 
-                        quam debitis assumenda beatae, iste rem aliquam illum, 
-                        quaerat sit autem sapiente fuga id dignissimos iusto 
-                        quibusdam. Iste porro modi consectetur adipisci tempore 
-                        voluptatum unde expedita doloremque magni accusantium 
-                        debitis dignissimos nam ipsam temporibus delectus molestiae
-                        nditiis voluptatibus, corporis numquam dolorem odio obcaecati? Animi illum deserunt 
-                        molestias eos, quia tempora sunt, nostrum necessitatibus, suscipit voluptates ad! Sed 
-                        deserunt corrupti officiis ipsa repellendus accusamus voluptatum. Quidem quod obcaecati 
-                        incidunt temporibus aspernatur earum laborum eius vero similique saepe. Eos sint est obcaecati 
-                        exercitationem? Facere, fugit. Tempora, obcaecati impedit. Et distinctio quod, neque magni dolore 
-                        hic quidem a nam iure recusandae fugit molestias fuga possimus inventore est maiores ad consequuntur, 
-                        ameeius, perspiciatis hic est saepe? Delectus excepturi nulla 
-                        quia reprehenderit incidunt, quam atque. Natus eveniet 
-                        placeat necessitatibus ut, atque architecto voluptate 
-                        laborum tempore beatae quidem. Totam consequuntur a amet 
-                        alias doloribus animi vitae obcaecati quidem voluptatum eos.
-                        Dolores deserunt sunt ab laborum fuga illo ut? Saepe obcaecati 
-                        repellat veniam illum consequatur quia, assumenda fugiat voluptas 
-                        laudantium dolorem? Labore dolores distinctio dolore iure, dolorum 
-                        magnam, itaque mollitia sint laboriosam possimus nisi omnis voluptatem 
-                        harum. Cum natus aspernatur sunt expedita fuga consectetur quasi? Nemo 
-                        eos perspiciatis facere dignissimos in eligendi id. Cum laboriosam dicta 
-                        iure voluptas inventore cumque corporis architecto, id blanditiis porro tempore 
-                        . Sunt natus doloribus accusantium aperiam numquam repellendus odio sapiente rem, 
-                        porro quasi nam expedita iure ipsa veritatis quaerat magni nesciunt quod delectus 
-                        molestias id? Cupiditate vero illo repellendus dolor nihil, magni consequuntur vel 
-                        recusandae voluptas quam porro accusamus non ipsum tenetur adipisci eum soluta eveniet 
-                        blat, eos molestiae harum voluptas repellat perferendis. Illo ea maxime nihil enim vitae temporibus? 
-                        Provident quo, accusamus praesentium, corporis illo corrupti dicta iure numquam voluptates officia 
-                        alias ea fugit amet sunt modi animi aut nulla architecto! Hic eos assumenda numquam ipsum? Ipsum 
-                        aut eum dolor ea fuga odit, provident earum quasi deserunt debitis quam, nihil dignissimos beatae 
-                        commodi facere ipsa! Possimus, saepe quos facere repellendus dignissimos unde nulla ea nesciunt 
-                        odit atque, nihil laudantium? Asperiores facilis at voluptatem illum labore, aperiam tempore amet 
-                        ut ducimus inventore eius dolore optio deleniti soluta maiores blanditiis dolor ratione porro earum 
-                        quae! Perferendis odit similique cum eos.
+                      <p> For this project, I created a Spring Boot MVC application where I reviewed 
+                          my favorite Animes. To create it, I used the Spring Initializer utilizing 
+                          three dependencies, Spring Boot DevTools, and the Thymeleazf Template.
+                          <br>
+                          <br>
+                          <img src="images\SpringBootFreamWork(AnimeReview).png" alt="" srcset="">
+                          <br>
+                          <br>
+                          This project was very test heavy in that we had to test the connection using the
                         </p>
                         <div class="modalFooter">
                           <a
