--- a/index.html
+++ b/index.html
@@ -257,7 +257,9 @@
                     </div>
                     <div style="height: 350px; overflow-y: scroll">
                       <br>
-                      <p> For this project, I created a Spring Boot MVC application where I reviewed 
+                      <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid, officia, optio ad odio aspernatur praesentium nostrum est natus consequuntur distinctio nobis tenetur necessitatibus placeat voluptatibus accusamus, ducimus ipsam. Ex at voluptatibus optio libero nostrum laborum, quas autem ipsum similique, aliquam repellat repellendus quisquam quam aspernatur reprehenderit. Asperiores perspiciatis laudantium ea, accusamus hic voluptatum! Earum inventore, error autem alias nam sequi dicta! Explicabo blanditiis fugiat ullam eveniet et praesentium eligendi ex nulla id facere dolorem nisi dolores sit maxime eius, porro totam placeat deserunt perspiciatis repellat molestiae deleniti aspernatur, aut temporibus. Quibusdam ipsum recusandae reprehenderit voluptates quasi, accusamus est dolorum rerum officia, numquam impedit modi velit eveniet ex. Consequuntur cupiditate nulla ex est corrupti velit illo et possimus consequatur, facere eveniet. Quis, nihil iure! Nisi quia officia sed rem ab ut impedit minima placeat quidem veniam. Impedit blanditiis odio natus iste iure. Facilis tempore aliquid ab praesentium. Fuga voluptas aperiam incidunt, labore non vel cum molestias qui ut rerum assumenda temporibus dolor cumque aliquid error perspiciatis veritatis vero. Eveniet natus adipisci nostrum inventore praesentium molestiae dolorem, suscipit, assumenda nam veritatis quasi facilis. Voluptatum architecto numquam illum explicabo atque voluptate dignissimos commodi itaque? Animi amet at natus delectus nostrum fugit optio iste odit placeat nihil, nisi accusantium molestiae aut quaerat commodi voluptates ex numquam esse. Asperiores facilis ipsum dolor praesentium, incidunt ullam autem, voluptatem officiis consequuntur id totam dolores adipisci tempora, molestiae in. Sapiente ullam corrupti, fuga illum itaque, nesciunt voluptate sit incidunt esse tempore debitis et beatae praesentium minus aut, eum voluptas. Voluptate ea accusantium nisi nostrum cumque. Sunt reiciendis tempore veniam suscipit labore dolores. Omnis optio temporibus cum aperiam corrupti! Aliquam quia omnis tempora at porro, eius exercitationem dolores consequuntur ex doloribus repudiandae amet alias impedit architecto dolor a deleniti illo vel non blanditiis dicta veniam cum. Commodi, nemo ad obcaecati officiis repellat, dicta velit fugiat modi quod culpa laudantium iste nihil! Distinctio fugit commodi autem totam, praesentium repudiandae? Neque molestiae quasi ratione repellat mollitia eveniet in assumenda consectetur hic tenetur similique perferendis, cupiditate quo rem odio dolor enim nesciunt totam odit incidunt eaque eos sed. Cupiditate in temporibus quis consectetur possimus fuga dolor repellendus neque soluta doloribus veritatis nihil mollitia itaque, sint quod provident nemo id hic error optio impedit omnis! Magnam odio similique nemo maxime nobis! Molestiae consectetur facere modi beatae amet aut nesciunt quaerat enim, alias similique repellat eum aliquid perferendis vel deserunt, esse non. Fugiat temporibus totam iure. Earum, consectetur a reprehenderit impedit laudantium quis animi, cumque et unde quam odio repellendus. Quasi vero inventore magnam omnis ex maiores, rerum expedita odio. Ex itaque quia facere hic aut est voluptatibus? Quibusdam a consequatur error animi iste non delectus reiciendis molestiae quod aliquam laboriosam officia perspiciatis quis beatae temporibus iusto odio vel at deleniti esse tempore, cum earum tenetur. Nam similique quasi, nisi esse veniam nulla eius, error eos laudantium ducimus magni obcaecati placeat neque! Tenetur animi error quis, aliquid at esse ad nihil pariatur maiores neque? Repellat odit amet earum quos numquam delectus suscipit, magnam quia ratione at incidunt natus, veritatis recusandae magni nam eaque sint quasi dolorum commodi ut id facilis minima deserunt maiores? Totam quia inventore officia numquam natus, magni quae quam quos enim odit culpa libero ad perferendis reiciendis? Est nostrum veniam voluptatibus ipsum odit cupiditate aspernatur impedit iste architecto a, harum dolorem modi esse facere perspiciatis doloribus incidunt. Optio laborum, dolor repellat pariatur a reiciendis delectus ratione, dicta temporibus animi repellendus, ex vel modi ullam sint eligendi? Ipsa, autem fuga! Corrupti nemo odio iure ipsam laboriosam, nam, nostrum quaerat temporibus debitis maxime incidunt illo nobis corporis magnam? In dicta magni asperiores maiores.
+                      <!-- <p> For this project, I created a Spring Boot MVC application where I reviewed 
                           my favorite Animes. To create it, I used the Spring Initializer utilizing 
                           three dependencies, Spring Boot DevTools, and the Thymeleazf Template.
                           <br>
@@ -265,7 +267,7 @@
                           <img src="images\SpringBootFreamWork(AnimeReview).png" alt="" srcset="">
                           <br>
                           <br>
-                          This project was very test heavy in that we had to test the connection using the
+                          I utilized TDD to build up the meat of this project.    -->
                         </p>
                         <div class="modalFooter">
                           <a
@@ -298,76 +300,25 @@
                     </div>
                     <div style="height: 350px; overflow-y: scroll">
                       <br>
-                      <p>Lorem ipsum dolor sit, amet consectetur adipisicing 
-                        elit. Laborum quos maxime perferendis placeat totam 
-                        repellat similique corporis voluptatibus possimus minus 
-                        dolorum, nemo magnam facere, voluptates atque quidem saepe 
-                        doloribus perspiciatis suscipit impedit est ea officia hic 
-                        reiciendis? Iure cum ipsa, accusantium sint facilis impedit
-                        neque nisi repellat? Assumenda inventore expedita animi 
-                        molestiae, aspernatur iure quas enim, voluptatibus maiores
-                        quia voluptatem error explicabo nihil! Eos illo cupiditate 
-                        suscipit quaerat. Ipsa aperiam iure illum, dolorum quis 
-                        quae reprehenderit officiis maiores consequatur, eos 
-                        nesciunt ipsam iste adipisci. Laborum voluptate ex, ab 
-                        expedita maiores iure, rerum, sit quod aut vel quis. Maxime
-                        aliquid quia ipsa esse voluptates sit laborum, dolorem 
-                        voluptas iste sapiente tempore, vitae in cumque quasi 
-                        ipsam, ullam architecto nemo quos! Necessitatibus 
-                        exercitationem rem doloribus neque id dolorem perferendis
-                        molestiae. Quod earum architecto eaque laudantium ipsum 
-                        nesciunt necessitatibus cum quia nobis! Sint inventore 
-                        debitis ipsa voluptate cum, quam magnam rem dolore cumque
-                        neque corporis, quas quo perferendis eveniet, aliquam 
-                        eligendi consequatur at. Fuga nesciunt accusantium 
-                        dignissimos explicabo eligendi quisquam commodi 
-                        voluptatibus dicta recusandae corrupti eum provident 
-                        repellendus, tempora, pariatur dolores nobis, neque 
-                        voluptates animi libero quae. Accusantium, sed qui
-                        natus neque explicabo veniam itaque numquam ea 
-                        porro quasi voluptas autem reprehenderit, delectus 
-                        sunt laudantium enim blanditiis nam eveniet vitae 
-                        aliquam quo saepe repellendus aperiam! Quibusdam 
-                        corrupti dignissimos eligendi aliquam, molestias 
-                        mollitia itaque neque doloremque voluptatum 
-                        necessitatibus molestiae tempora labore deleniti 
-                        eveniet quam dicta magni quae ut soluta omnis 
-                        repudiandae consequuntur reiciendis ipsum? Tempora 
-                        quam debitis assumenda beatae, iste rem aliquam illum, 
-                        quaerat sit autem sapiente fuga id dignissimos iusto 
-                        quibusdam. Iste porro modi consectetur adipisci tempore 
-                        voluptatum unde expedita doloremque magni accusantium 
-                        debitis dignissimos nam ipsam temporibus delectus molestiae
-                        nditiis voluptatibus, corporis numquam dolorem odio obcaecati? Animi illum deserunt 
-                        molestias eos, quia tempora sunt, nostrum necessitatibus, suscipit voluptates ad! Sed 
-                        deserunt corrupti officiis ipsa repellendus accusamus voluptatum. Quidem quod obcaecati 
-                        incidunt temporibus aspernatur earum laborum eius vero similique saepe. Eos sint est obcaecati 
-                        exercitationem? Facere, fugit. Tempora, obcaecati impedit. Et distinctio quod, neque magni dolore 
-                        hic quidem a nam iure recusandae fugit molestias fuga possimus inventore est maiores ad consequuntur, 
-                        ameeius, perspiciatis hic est saepe? Delectus excepturi nulla 
-                        quia reprehenderit incidunt, quam atque. Natus eveniet 
-                        placeat necessitatibus ut, atque architecto voluptate 
-                        laborum tempore beatae quidem. Totam consequuntur a amet 
-                        alias doloribus animi vitae obcaecati quidem voluptatum eos.
-                        Dolores deserunt sunt ab laborum fuga illo ut? Saepe obcaecati 
-                        repellat veniam illum consequatur quia, assumenda fugiat voluptas 
-                        laudantium dolorem? Labore dolores distinctio dolore iure, dolorum 
-                        magnam, itaque mollitia sint laboriosam possimus nisi omnis voluptatem 
-                        harum. Cum natus aspernatur sunt expedita fuga consectetur quasi? Nemo 
-                        eos perspiciatis facere dignissimos in eligendi id. Cum laboriosam dicta 
-                        iure voluptas inventore cumque corporis architecto, id blanditiis porro tempore 
-                        . Sunt natus doloribus accusantium aperiam numquam repellendus odio sapiente rem, 
-                        porro quasi nam expedita iure ipsa veritatis quaerat magni nesciunt quod delectus 
-                        molestias id? Cupiditate vero illo repellendus dolor nihil, magni consequuntur vel 
-                        recusandae voluptas quam porro accusamus non ipsum tenetur adipisci eum soluta eveniet 
-                        blat, eos molestiae harum voluptas repellat perferendis. Illo ea maxime nihil enim vitae temporibus? 
-                        Provident quo, accusamus praesentium, corporis illo corrupti dicta iure numquam voluptates officia 
-                        alias ea fugit amet sunt modi animi aut nulla architecto! Hic eos assumenda numquam ipsum? Ipsum 
-                        aut eum dolor ea fuga odit, provident earum quasi deserunt debitis quam, nihil dignissimos beatae 
-                        commodi facere ipsa! Possimus, saepe quos facere repellendus dignissimos unde nulla ea nesciunt 
-                        odit atque, nihil laudantium? Asperiores facilis at voluptatem illum labore, aperiam tempore amet 
-                        ut ducimus inventore eius dolore optio deleniti soluta maiores blanditiis dolor ratione porro earum 
-                        quae! Perferendis odit similique cum eos.
+                      <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita recusandae vitae maxime architecto incidunt esse, molestias dignissimos! Minima, atque ipsam praesentium temporibus expedita nam doloremque ipsa. Quaerat rerum minima animi incidunt iure? Eligendi, aspernatur fugit quaerat dignissimos molestias laboriosam at numquam voluptates facere atque officia non, deserunt odit inventore. Maiores animi suscipit quam in nostrum aspernatur, praesentium doloribus consectetur repellendus alias nihil ea! Sit impedit officia temporibus expedita quibusdam dicta, atque aliquam, voluptas ducimus fuga, nobis commodi sunt dolorem? Dolore, error, fugit dolores obcaecati earum quasi veritatis alias nulla, odio temporibus qui perferendis praesentium odit corporis amet cum in voluptate aliquam tempore sapiente ullam consequatur voluptatibus quo? Est sunt numquam deleniti nulla quo nemo? Beatae ut est quaerat iusto! Reiciendis neque nisi, maiores quos soluta deserunt autem velit hic porro, quo exercitationem possimus libero fugit rem! Laudantium aut aliquam voluptatibus accusamus quisquam nemo consequatur rem labore voluptas odio culpa sequi, doloribus nobis repudiandae molestiae iure sunt? Eaque libero, alias dolorem repudiandae quo voluptatem doloremque ratione? Saepe explicabo ducimus, deleniti deserunt dignissimos tenetur alias iusto ad mollitia ipsam pariatur impedit, eaque commodi incidunt? Fugiat deserunt ratione ab maxime exercitationem, soluta placeat facere quae nihil quidem dicta sed reprehenderit. Eligendi minus culpa neque modi commodi repudiandae dolores hic a. Fuga sed eius nihil expedita temporibus quibusdam facilis vel consequuntur eveniet, suscipit animi at cum quaerat molestiae iste amet reiciendis praesentium et? Voluptas, quae veritatis architecto reprehenderit, dicta error, porro sint magni tempora voluptates similique exercitationem quas assumenda laboriosam debitis ad. Voluptas tempora, praesentium culpa quasi accusamus earum rem eveniet porro quos veniam recusandae, error non ex architecto sint quae accusantium incidunt facere dolores a. Provident illum tempore est animi optio, dicta magnam eligendi temporibus quis aliquid sequi quod laudantium ullam reprehenderit tenetur pariatur asperiores voluptatum veritatis odit, vero debitis aut officiis. Fugiat accusantium amet quos fugit magnam nesciunt, pariatur, omnis minima delectus quaerat nostrum optio culpa consequuntur tempore deleniti soluta labore minus quisquam? Quidem laudantium doloremque, sint quo voluptatibus est iste, eum itaque, dolore animi voluptatem voluptates tempora. Cumque qui ex mollitia sit, tempore nesciunt exercitationem id a! Esse voluptatibus officiis error voluptatum suscipit soluta quisquam quas veniam sequi dolores nisi sint repudiandae, ullam recusandae? Rerum hic qui aut quam repellendus unde ipsam! Explicabo architecto nesciunt sit atque iure harum provident voluptates dolorem numquam facilis enim, totam, voluptatem velit quasi quo quidem dicta voluptate sapiente animi commodi aspernatur quae eum sint sed. Eligendi expedita nemo maiores optio aliquam excepturi ipsam facere sunt incidunt ad? Sequi a tempore beatae quia placeat cumque, quibusdam odit fugiat voluptatem ullam voluptate asperiores labore praesentium esse accusantium ea, recusandae itaque illum quam dignissimos. Omnis, nostrum repellendus earum beatae repudiandae ab dicta saepe, nulla tempora voluptatem in maxime deleniti qui placeat nam. Adipisci quibusdam culpa odio assumenda sint. Quia laudantium nulla accusantium aut dignissimos delectus deleniti obcaecati tempora doloremque suscipit nostrum ipsum, ullam dolor cum quibusdam natus, exercitationem, quis est minus molestias nisi amet eum? Placeat facilis necessitatibus dolore, tempore praesentium asperiores voluptate iure voluptatum dignissimos pariatur consectetur ab possimus commodi ullam doloribus sit numquam porro. Quibusdam deleniti nam, saepe qui soluta, quasi optio tenetur suscipit doloribus beatae natus eius quia, maxime molestias. Aspernatur error sit dolores harum, magni quisquam quaerat cupiditate veritatis unde exercitationem ex a. Enim minus doloremque voluptatum nobis necessitatibus et error illo ipsum optio dolor quae amet vel eligendi tempora, dolorum ut molestias tempore eaque aliquid! Facilis sunt ullam impedit rem expedita eveniet eius praesentium doloremque, ratione autem, consequuntur ex dolore animi esse obcaecati adipisci excepturi nobis. Velit accusamus aliquid qui dolorum delectus quas suscipit doloremque, corporis incidunt aspernatur ex reiciendis, alias molestiae corrupti.
+                        <!-- This is Donut Maker! It is based of over the game called Cookie Maker. This project really helped
+                        in bring what I learned from doing our virtual pet projects using Java together with JavaScript. The
+                        primis of this project is to make a game where a user can click on the donut picture to great a donut.
+                        The more donuts made, the more Auto Clickers and Donut Multipliers the user can buy. Auto Clicks automatically 
+                        increases the amount of clicks one click per second for every Auto Clicker. The Donut Multiplier multiplies 
+                        the number of Donuts per click. The prices also change per Auto Clicker and Donut Multiplier. The Auto Clicker's 
+                        price starts at 100 donuts and increases by 10% while the Donut Multiplier's price is 10 donut and increases by 20%.
+                        To build these features I utilized Test Driven Development.  -->
+                        <br>
+                        <br>
+                        <br>
+                        <img src="images\DonutMakerTDD.png" alt="" srcset="">
+                        <br>
+                        <br>
+                        <br>
+                        T
+                        
                         </p>
                         <div class="modalFooter">
                           <a
